# comint-osquery

./: AUDIT.md  Dockerfile  INTEGRATIONS.md  INTEROP.md  README.md  UPSTREAM.md  install.ps1  install.sh  layman.md  pyproject.toml
cognis_mil/: __init__.py  classmark.py  cli.py  exporters.py  models.py
comint_osquery/: __init__.py  __main__.py  cli.py  connect.py  core.py  feeds.py  fleet.py
demos/: 01_isso_assessment.py  02_soc_detection.py  03_sysadmin_fleet.py  04_auditor_poam.py  05_airgap_enrichment.py  06_multiformat_export.py  07_parse_error_handling.py  08_pack_deployment.py  09_fleet_json_export.py  10_poam_json.py  11_classification_banner.py  12_airgap_snapshot.py  13_countermeasure_expansion.py  14_audit_chain.py  15_fail_on_gating.py  16_control_titles.py  17_drift_regression.py  18_full_rmf_workflow.py  19_attack_coverage_matrix.py  20_connect_emit.py  _common.py  run_all.py
demos/01-failing-host/: SCENARIO.md  results.json
demos/02-clean-baseline/: SCENARIO.md  results.json
demos/03-fips-violation/: SCENARIO.md  results.json
demos/04-selinux-permissive/: SCENARIO.md  (+1 more)
docs/: ARCHITECTURE.md  DEMOS.md  FLEET_CORRELATION.md  INSTALL.md
examples/: help.txt  version.txt
tests/: test_audit.py  test_classmark.py  test_cli_extended.py  test_connect.py  test_connect_extended.py  test_core_scan.py  test_csv_export.py  test_datafeeds.py  test_datafeeds_cli.py  test_demo_output.py  test_demo_scenarios.py  test_demos.py  test_exporters.py  test_feeds.py  test_feeds_edge.py  test_fixtures_integrity.py  test_fleet.py  test_fleet_cli.py  test_fleet_extended.py  test_hardening.py  test_make_cli.py  test_models.py  test_smoke.py
(+24 files in other folders)
